--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nuxt": "^3.3.3"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3"
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4"
   }
 }
