--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.4"
+    "bootstrap-icons": "^1.10.4",
+    "vue3-tabs-component": "^1.1.2"
   }
 }
