--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-tabs-component": "^1.1.2"
   }
 }
