--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nuxt": "^3.3.3"
   },
   "dependencies": {
+    "@chenfengyuan/vue-countdown": "^2.1.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
     "leaflet": "^1.9.3",
